GNOME Bugzilla – Bug 692899
global_remove handler is missing
Last modified: 2013-02-02 04:03:45 UTC
Applications will crash when receiving wl_registry.global_remove events.
Created attachment 234868 [details] [review] [PATCH] wayland: Add global_remove handler Do not crash on wl_registry.global_remove events anymore. https://bugzilla.gnome.org/show_bug.cgi?id=692899 --- gdk/wayland/gdkdisplay-wayland.c | 8 +++++++- 1 file changed, 7 insertions(+), 1 deletion(-)