gdk/wayland/gdkdisplay-wayland.c
@@ -151,9 +151,15 @@ gdk_registry_handle_global(void *data, struct wl_registry *registry, uint32_t id
   }
 }
 
+static void
+gdk_registry_handle_global_remove(void *data,
+                                  struct wl_registry *registry, uint32_t name)
+{
+}
 
 static const struct wl_registry_listener registry_listener = {
-	gdk_registry_handle_global
+    gdk_registry_handle_global,
+    gdk_registry_handle_global_remove
 };
 
 GdkDisplay *
